@@ -1684,7 +1684,6 @@ long    Z_ispow2(GEN x);
 long    Z_ispowerall(GEN x, ulong k, GEN *pt);
 long    Z_issquareall(GEN x, GEN *pt);
 GEN     Z_nv_mod(GEN P, GEN xa);
-GEN     ZNstar(GEN N, long flag);
 GEN     ZV_allpnqn(GEN x);
 GEN     ZV_chinese(GEN A, GEN P, GEN *pt_mod);
 GEN     ZV_chinese_tree(GEN A, GEN P, GEN tree, GEN *pt_mod);
@@ -4691,7 +4690,6 @@ INLINE GEN    bid_get_gen(GEN bid);
 INLINE GEN    bid_get_gen_nocheck(GEN bid);
 INLINE GEN    bid_get_grp(GEN bid);
 INLINE GEN    bid_get_ideal(GEN bid);
-INLINE GEN    bid_get_ind(GEN bid);
 INLINE GEN    bid_get_mod(GEN bid);
 INLINE GEN    bid_get_no(GEN bid);
 INLINE GEN    bid_get_sarch(GEN bid);
@@ -4741,7 +4739,6 @@ INLINE long   ellQp_get_prec(GEN E);
 INLINE GEN    ellQp_get_zero(GEN x);
 INLINE long   ellR_get_prec(GEN x);
 INLINE long   ellR_get_sign(GEN x);
-
 INLINE GEN    gal_get_pol(GEN gal);
 INLINE GEN    gal_get_p(GEN gal);
 INLINE GEN    gal_get_e(GEN gal);
@@ -4803,6 +4800,13 @@ INLINE GEN    rnf_get_zk(GEN nf);
 INLINE void   rnf_get_nfzk(GEN rnf, GEN *b, GEN *cb);
 INLINE long   rnf_get_varn(GEN rnf);
 INLINE ulong  upr_norm(GEN pr);
+INLINE GEN    znstar_get_N(GEN G);
+INLINE GEN    znstar_get_conreycyc(GEN G);
+INLINE GEN    znstar_get_conreygen(GEN G);
+INLINE GEN    znstar_get_faN(GEN G);
+INLINE GEN    znstar_get_no(GEN G);
+INLINE GEN    znstar_get_pe(GEN G);
+INLINE GEN    znstar_get_Ui(GEN G);
 
 INLINE long   closure_arity(GEN C);
 INLINE const char * closure_codestr(GEN C);
