@@ -103,6 +103,9 @@ BA   44- new GP function permorder
 BA   45- new GP function galoisconjclasses
      46- [libpari] Flxn_inv
      47- new GP function znchargalois
+     48- [libpari] expose znstar internal interface: znstar_get_N,
+      znstar_get_conreycyc, znstar_get_conreygen, znstar_get_faN, znstar_get_no,
+      znstar_get_pe, znstar_get_Ui
 
   Changed
       1- rewrite bnfnarrow
